# cv_video_recording

./: .gitignore  CMakeLists.txt  main.cpp
sample/: CMakeLists.txt  opencv_play_video.cpp  record_laptop_cam.cpp
src/: VideoRecorder.cpp  VideoRecorder.h  video_playing.cpp  video_recording.cpp
